src/layout/popups/toast/toast.scss
.custom-toast {
    position: absolute;
    width: calc(100% - 17px);
    background-color: var(--palette1-1);
    z-index: 2;
    color: white; 
    .icon {
        flex-basis: 50px;
        font-size: 48px;
    }
    .text {
    }
}

.custom-toast.WARNING {
    background-color: var(--warning-light);
    color: white; 
}
.custom-toast.DANGER {
    background-color: var(--danger-light);
    color: white; 
}
.custom-toast.SUCCESS {
    background-color: var(--success-light);
    color: white; 
}

